- Bug #451: CAssetManager::publish() may not report error when an asset is missing on BSD (Qiang)
- Bug #460: CFileValidator would display wrong error message when the uploaded file size is too small (Qiang)
- Bug #477: CUrlManager generates unwanted homepage URL when URL suffix is used (Qiang)
- Bug #486: CDbExpression does not work as expected for PHP versions prior to 5.2.0 (Qiang)
- Bug: Fixed an issue in CNumberFormatter which incorrectly cached parsed formats (Qiang)
- New #424: Improved CCaptcha to allow clicking on CAPTCHA image to refresh it (Qiang)
- New #425: Added defaultParams option to the rules used by CUrlManager (Qiang)
- New #436: Added error templates in Russian (idlesign)
- New #467: Improved the algorithm for determining script URL by CHttpRequest (Qiang)
- New #488: Added CCache::mget() to support retrieving multiple cached values at a time (Qiang)
- New #492: Enhanced form submit script so that it respects to existing submit event handlers (Qiang)
- New #493: Added call stack information to log when a PHP error occurs (Qiang)
- New: CDbCommand::bindParam() and bindValue() now return the command object so that they can be used in a chainable fashion (Qiang)
- New: Added thead and tbody to the code generated by crud command (Qiang)
- New: Added CFormModel::init() and CActiveRecord::init() (Qiang)
- New: Improved CFileHelper::getMimeType() so that it can return a meaningful result in most cases (Qiang)
- New: Improved yiic shell commands so that they are easier to be extended (Qiang)
- New: Added CExistValidator.criteria property (Qiang)
- New: Improved CHtml::statefulForm() to make it XHTML-compliant (Qinag)
- New: Added CBaseUserIdentity::clearState() (Qiang)
- Chg: Modified the count() method of relational AR to support counting composite keys (Qiang)
- Chg: Reverted back the support for assigning a related object to an AR object (Qiang)

Version 1.0.7 July 5, 2009
--------------------------